--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,6 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
-    //"no-unused-vars": ["error", { "varsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
-
-// {
-//   "extends": ["next/core-web-vitals", "next/typescript"],
-//   "rules": {
-//     "@typescript-eslint/no-explicit-any": 'off', // Disable the rule that disallows 'any' type
-//   }
-// }
