--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "prisma generate",
-  "build": "npm run prisma:generate && next build",
-  "vercel-build": "npm run prisma:generate && next build"
+    "prisma:generate": "prisma generate"
+  
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
