--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
+    "prisma:generate": "prisma generate",
     "build": "npm run prisma:generate && next build"
   
   },
