--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+   "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "prisma generate",
-    "build": "npm run prisma:generate && next build"
-  
+  "vercel-build": "npm run prisma:generate && next build"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
