--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+  "prisma:generate": "prisma generate",
   "vercel-build": "npm run prisma:generate && next build"
   },
   "dependencies": {
