--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
   "prisma:generate": "prisma generate",
-  "vercel-build": "npm run prisma:generate && next build"
+  "vercel-build": "npm run prisma:generate && next build || exit 1"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
