--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   "dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-  "prisma:generate": "prisma generate",
-  "vercel-build": "npm run prisma:generate && next build || exit 1"
+    "prisma:generate": "prisma generate",
+    "vercel-build": "npm run prisma:generate && next build || exit 1"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -37,6 +38,7 @@
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
