--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vercel-build": "npm run prisma:generate && next build || exit 1"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.2",
     "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.1",
