--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-lottie-player": "^2.1.0",
     "recharts": "^2.13.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
