--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
     "recharts": "^2.13.0",
     "sonner": "^1.7.0",
