--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/next-auth": "^3.13.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.8",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "3.7",
     "next": "14.2.15",
@@ -45,14 +48,17 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
+    "react-redux": "^9.1.2",
     "recharts": "^2.13.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
