--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "recharts": "^2.13.0",
     "sonner": "^1.7.0",
